src/objects/Ownership_Log__c.object
<CustomObject>
    <description>Creates a log that is automatically populated each time a case changes ownership.</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Case Number</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Ownership Log</relationshipLabel>
        <relationshipName>Ownership_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>IF(End__c  -  Start__c &gt; 0, 
(floor((End__c -  Start__c)*24))
+
(((((End__c -  Start__c)*24)-floor((End__c -  Start__c)*24))*60)/100), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Ownership log type (Case Ownership Change or Case Completion)</description>
        <label>Type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Ownership Log</label>
    <listViews>
        <fullName>X1st_owner_Queues</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Duration__c</columns>
        <columns>Owner__c</columns>
        <columns>Sequence__c</columns>
        <columns>Start__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sequence__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Owner__c</field>
            <operation>contains</operation>
            <value>eBranch_Queue</value>
        </filters>
        <filters>
            <field>Owner__c</field>
            <operation>contains</operation>
            <value>ebranch</value>
        </filters>
        <label>1st owner (Queues)</label>
    </listViews>
    <nameField>
        <displayFormat>COSL{000000000}</displayFormat>
        <label>Ownership Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ownership Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>